Added alternate parse for failed stories Fixed author bio Cleaned story titles Added run time at log end